# pg_backup_ctl-plus

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  README
SPECS/CENTOS8/: pg_backup_ctl-plus.spec
SPECS/F27/: pg_backup_ctl-plus.spec
SPECS/F31/: pg_backup_ctl-plus.spec
SPECS/RHEL7/: pg_backup_ctl-plus.spec
SPECS/RL9/: pg_backup_ctl-plus.spec
cmake/Modules/: Findlibpq.cmake  Findliburing.cmake  Findpopt.cmake  Findreadline.cmake  Findsqlite3.cmake  Findzstd.cmake
debian/: packages.list
docs/functions/: LANGUAGE.md
include/: common.hxx  memorybuffer.hxx  pg_backup_ctl.hxx  pg_backup_ctl.hxx.in  pgbckctl_exception.hxx  postgres.hxx  rtconfig.hxx  tab_completion.hxx
include/backup/: backup.hxx  backupcleanupdescr.hxx  backupprocesses.hxx  basebackupmsg.hxx  stream.hxx  streamident.hxx  xlogdefs.hxx
include/catalog/: BackupCatalog.hxx  backuplockinfo.hxx  catalog.hxx  descr.hxx  output.hxx  retention.hxx
include/filesystem/: fs-archive.hxx  fs-copy.hxx  fs-pipe.hxx  io_uring_instance.hxx
include/jobs/: bgrndroletype.hxx  copyprotocolcontext.hxx  daemon.hxx  exectx.hxx  jobhandles.hxx  pgiosocketcontext.hxx  reaper.hxx  recoverydescr.hxx  server.hxx  shm.hxx  signalhandler.hxx
include/parser/: commands.hxx  exectx.hxx  parser.hxx  pgproto-commands.hxx  pgproto-parser.hxx
include/proto/: pgmessage.hxx  pgproto-copy.hxx  pgsql-proto.hxx  proto-buffer.hxx  proto-catalog.hxx  proto-descr.hxx
include/recovery/: recovery.hxx
resources/reference/: Makefile
resources/reference/source/: commandref.rst  conf.py  index.rst  protocolref.rst
resources/systemd/: pg_backup_ctl-plus-tempfiles.conf  pgbckctl-launcher.service  pgbckctl-walstreamer.service  pgbckctl-walstreamer@.service
src/backup/: backup.cxx  backupprocesses.cxx  basebackupmsg.cxx  stream.cxx  xlogdefs.cxx
src/catalog/: backuplockinfo.cxx  catalog.cxx  output.cxx  retention.cxx
src/filesystem/: copymgr.cxx  fs-archive.cxx  io_uring_instance.cxx
src/jobs/: copyprotocolcontext.cxx  daemon.cxx  exectx.cxx  pgiosocketcontext.cxx  reaper.cxx  server.cxx  signalhandler.cxx
src/main/: common.cxx  memorybuffer.cxx  pg_backup_ctl.cxx  rtconfig.cxx  tab_completion.cxx
src/parser/: commands.cxx  parser.cxx  pgproto-commands.cxx  pgproto-parser.cxx
src/protocol/: pgmessage-copydata.cxx  pgmessage-copyfail.cxx  pgmessage-copyresponse.cxx  pgmessage.cxx  pgproto-copy.cxx  pgproto-copystate.cxx  proto-buffer.cxx  proto-catalog.cxx  proto-handler.cxx  proto-types.cxx
src/recovery/: restore.cxx
src/sql/: catalog.sql
test/src/: test_catalog.cxx  test_copymgr.cxx  test_formatter.cxx  test_parser.cxx  test_pgmessage.cxx  test_pgmessage_copydata.cxx  test_pgmessage_copyfail.cxx  test_pgmessage_copyresponse.cxx  test_pgprotocopy.cxx  test_pgprotocopybothstate.cxx  test_pgprotocopyinstate.cxx  test_pgprotocopyoutstate.cxx  test_pgprotocopyresponsestate.cxx  test_pgprotocopystate.cxx
test_parser/: test.pg_backup_ctl  test2.pg_backup_ctl  test3.pg_backup_ctl  test4.pg_backup_ctl  test5.pg_backup_ctl  test6.pg_backup_ctl  test7.pg_backup_ctl  test8.pg_backup_ctl
